mobile nav modified and shops filters on mobile fixed

--- a/css/shops.css
+++ b/css/shops.css
@@ -316,3 +316,18 @@ cursor: pointer;
 
 
 }
+@media(width < 480px){
+    .shops-list{
+        justify-content: flex-start;
+    }
+    .single-shop{
+        max-width: 160px;
+        gap: 40px;
+        height: 160px;
+    }
+    .shops-filters select{
+        padding: 0;
+    }
+
+
+}
