--- a/styles.css
+++ b/styles.css
@@ -171,6 +171,7 @@ font-weight: normal;
     display: flex;
     margin-bottom: 7px;
     align-items: center;
+    color: white;
     gap: 19px;
     cursor: pointer;
 }
@@ -715,12 +716,11 @@ z-index: 2;
    
   }
 
-  /* Each bar of the hamburger */
   .bar {
     width: 100%;
-    height: 2px;
+    height: 0.1em;
     background-color: black;
-    transition: 0.4s;
+    transition: 0.4s ease;
   }
 
   /* Transform the hamburger to an "X" when active */
@@ -773,6 +773,7 @@ mobile version...
 @media(width < 1075px){
     .mobile-nav{
         display: flex;
+        flex-direction: row-reverse;
    
         padding: 20px 40px;
 
@@ -792,7 +793,7 @@ mobile version...
     }
     .navbar{
         position: absolute;
-        flex-direction: column;
+        flex-direction: column-reverse;
         
         align-items: flex-start;
         transform: translateX(-100%);
@@ -823,8 +824,11 @@ height: 100%;
         width: 80%;
     }
    .navbar  .nav-right{
+        /* display: none; */
+        /* gap: 10px; */
+    }
+    .navbar .logo{
         display: none;
-        gap: 10px;
     }
   
 
@@ -999,7 +1003,20 @@ headers responsive
 @media(width < 768px){
     .scrolldown{
         bottom: 50%;
+        left: calc(50% - 19px);
+
     }
+    .nav-right .search{
+        height: 22px;
+        width: 22px;
+    }
+    .nav-right .search img{
+width: 100%; 
+height: 100%;   
+}
+.custom-select select{
+    padding-right: 0;
+}
     .innerpage-hero h1{
         font-size: 45px;
 
@@ -1102,6 +1119,14 @@ mobile version
 */
 
 @media(width < 550px){
+    .mobile-nav{
+        padding: 10px;
+        height: 70px;
+    }
+    .logo {
+        width:68px;
+        height: 64px;
+    }
     .hero{
         background-position: center;
         background-size: cover;
